refactor : 메시지 응답 정렬 추가 및 불필요한 파라미터 수정